<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_statistics_id"
        android:orderInCategory="100"
        android:title="@string/menu_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings_id"
        android:orderInCategory="100"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_add_random_figure_id"
        android:orderInCategory="100"
        android:title="@string/menu_add_random_figure" />

    <item
        android:id="@+id/menu_remove_and_regenerate_id"
        android:orderInCategory="100"
        android:title="@string/menu_remove_and_regenerate" />

    <item
        android:id="@+id/menu_about_id"
        android:orderInCategory="100"
        android:title="@string/menu_about" />

</menu>